# rkmedia

./: Rockchip_Developer_Guide_Linux_RKMedia_CN.md
douyin_rv1126_ffmpeg_network_project/: .rkmedia_module_function.cpp.swp  Makefile  rkmedia_assignment_manage.cpp  rkmedia_assignment_manage.h  rkmedia_data_process.cpp  rkmedia_data_process.h  rkmedia_ffmpeg_config.cpp  rkmedia_ffmpeg_config.h  rkmedia_module.cpp  rkmedia_module_function.cpp  rv1126_ffmpeg_main  rv1126_ffmpeg_main.cpp
douyin_rv1126_ffmpeg_network_project/arm_freetype/lib/: libfreetype.la  libfreetype.so.6
douyin_rv1126_ffmpeg_network_project/arm_sdl/lib/: libSDL-1.2.so.0  libSDL.la  libSDLmain.la
douyin_rv1126_ffmpeg_network_project/arm_sdl_ttf_install/lib/: libSDL_ttf-2.0.so.0  libSDL_ttf.la
douyin_rv1126_ffmpeg_network_project/include/rkmedia/: rkmedia_rga.h  rkmedia_vi.h
rkmedia-master/rkmedia-master/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Config.in  LICENSE  easymedia_test.sh  format.sh  rkmedia.rvmk
rkmedia-master/rkmedia-master/cmake/: FindLiveMedia.cmake  FindRkAiq.cmake  Findminilogger.cmake
rkmedia-master/rkmedia-master/examples/: CMakeLists.txt  Makefile  rkmedia_adec_ao_test.c  rkmedia_ai_aenc_test.c  rkmedia_ai_test.c  rkmedia_ao_test.c  rkmedia_audio_test.c  rkmedia_isp_stresss_test.c  rkmedia_isp_test.c  rkmedia_main_stream_with_jpeg_test.c  rkmedia_rga_api_test.c  rkmedia_rga_crop_venc_test.c  rkmedia_stream_stress_test.c  rkmedia_venc_avbr_test.c  rkmedia_venc_cover_test.c  rkmedia_venc_jpeg_light_test.c  rkmedia_venc_jpeg_test.c  rkmedia_venc_local_file_test.c  rkmedia_venc_mjpeg_test.c  rkmedia_venc_osd_test.c  rkmedia_venc_roi_osd_test.c  rkmedia_venc_smartp_test.c  rkmedia_vi_double_cameras_switch_test.c  rkmedia_vi_double_cameras_test.c  rkmedia_vi_get_frame_test.c  rkmedia_vi_god_mode_test.c  rkmedia_vi_luma_only_mode_test.c  (+13 more)
rkmedia_test/: CMakeLists.txt  vi_get_frame_test.c  vi_get_frame_test.cpp  vi_venc_h264.cpp
rkmedia_test/include/easymedia/: buffer.h  control.h  demuxer.h  encoder.h  flow.h  image.h  link_config.h  media_reflector.h  reflector.h  rknn_utils.h  sound.h
rkmedia_test/include/rkmedia/: rkmedia_aenc.h  rkmedia_api.h  rkmedia_buffer.h  rkmedia_muxer.h
rkmedia_test/lib/: libasound.so.2.0.0  libeasymedia.pc  libliveMedia.so.61.0.0  librga.so.2  librockchip_mpp.so.0  libv4l2.so.0
rkmedia_thread/: CMakeLists.txt  ffmpeg_rtsp.cpp  ffmpeg_rtsp.h  rkmedia.cpp  rkmedia.h  rv1126_ffmpeg_main.cpp
rkmedia_thread/include/easymedia/: codec.h  decoder.h  filter.h  key_string.h  lock.h  media_config.h  media_type.h  message.h  message_type.h  muxer.h  rga_filter.h  rknn_user.h  stream.h  utils.h
rkmedia_thread/include/ffmpeg/libavutil/: ffversion.h
rkmedia_thread/include/rkmedia/: rkmedia_adec.h  rkmedia_ai.h  rkmedia_ao.h  rkmedia_common.h  rkmedia_event.h  rkmedia_move_detection.h  rkmedia_occlusion_detection.h  rkmedia_rga.h  rkmedia_vdec.h  rkmedia_venc.h  rkmedia_vi.h  rkmedia_vmix.h  rkmedia_vo.h
rkmedia_thread/lib/: libUsageEnvironment.so.3  libavdevice.so.62.0.100  libavfilter.so.11.0.100  libavformat.so.62.0.100  libeasymedia.pc  libeasymedia.pc.cmake  libswresample.so.6  libv4lconvert.so.0
(+213 files in other folders)
